--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,7 +15,7 @@
             <div id="logo"><a href=""><img src="images/logo.png" height="60vh" width="70vw"></a></div>
             <div id="menubar">
         <ul>
-            <li><a href="Home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
              <li><a href="">Arohan
                     <ul>
                         <li><a href="">Logo Maestro</a></li>
